<resources>
    <string name="app_name">BattlingShips</string>

    <string name="main_menu_btn1">Create a game</string>
    <string name="main_menu_btn2">Join a game</string>
    <string name="main_menu_btn3">Credits</string>
    <string name="main_menu_btn4">Exit</string>

    <string name="game">Now you\'re playing!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_ending_view">Game over</string>
    <string name="end_msg">You either won or lost.\nGame over.</string>

    <string name="title_activity_action_view">ActionView</string>
    <string name="title_activity_activity_action_view">activity_action_view</string>


    <string name="title_activity_game_view">GameView</string>
    <string name="game_btn0">Ending view</string>
    <string name="title_activity_activity_credit_view">activity_credit_view</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_credit_view">Credit_view</string>
    <string name="title_activity_join_game_view">JoinGameView</string>

    <string name="title_activity_create_new_game">Create Game</string>
    <string name="createGameForm_username">Username</string>
    <string name="createGameForm_username_hint">Nickname</string>
    <string name="createGameForm_playerCnt">Number of players</string>
    <string name="createGameForm_playerCnt_hint">1</string>
    <string name="createGameForm_create">Create</string>

    <string name="mapView_actionBtn">Perform Action</string>

    <string name="game_JoinMessage">You just joined the party.</string>

</resources>
