<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context="no.ntnu.tdt4240.a18.battlingships.view.MainMenu"
    android:foregroundGravity="center|center_horizontal">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="198dp"
        android:id="@+id/imageView"
        android:layout_alignLeft="@+id/main_menu_btn1"
        android:layout_alignStart="@+id/main_menu_btn1"
        android:src="@mipmap/logo"
        android:layout_marginTop="70sp"
        android:layout_gravity="center_horizontal" />

    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="149dp" android:keepScreenOn="true" android:textColor="#ffe56d23"
        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
        android:text="@string/app_name"
        android:shadowColor="#ff626262" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="270dp"
        android:layout_gravity="center_horizontal|bottom"
        android:padding="20pt"
        android:id="@+id/main_menu_buttons"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn1"
            android:id="@+id/main_menu_btn1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="createNewGame"
            android:enabled="true"
            android:padding="20dp"
            android:width="100sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:height="75sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn2"
            android:id="@+id/main_menu_btn2"
            android:width="100sp"
            android:layout_alignBottom="@+id/main_menu_btn1"
            android:layout_toRightOf="@+id/main_menu_btn1"
            android:layout_toEndOf="@+id/main_menu_btn1"
            android:height="75sp"
            android:onClick="joinGame" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn3"
            android:id="@+id/main_manu_btn3"
            android:width="100sp"
            android:layout_below="@+id/main_menu_btn2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:height="75sp"
            android:nestedScrollingEnabled="false"
            android:onClick="showCredits" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn4"
            android:id="@+id/main_menu_btn4"
            android:width="100sp"
            android:layout_below="@+id/main_menu_btn2"
            android:layout_toRightOf="@+id/main_manu_btn3"
            android:layout_toEndOf="@+id/main_manu_btn3"
            android:height="75sp"
            android:onClick="exitApp" />

    </RelativeLayout>

</FrameLayout>
